# QT-SQLITE-MANAGER

./: CMakeLists.txt  README.md  database.cpp  database.h  main.cpp  runTests.sh  sql_window.cpp  sql_window.h
